cluster/apps/linkwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
spec:
  selector:
    app: linkwarden-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-meilisearch
  namespace: linkwarden
spec:
  selector:
    app: linkwarden-meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: http
  type: ClusterIP
