cluster/apps/linkwarden/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden-tailscale
  namespace: linkwarden
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - linkwarden
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  number: 3000
